--- a/less/header.less
+++ b/less/header.less
@@ -29,6 +29,7 @@
     position: absolute;
     background-color: white;
     width: (10 * @grid-gutter-width);
+    max-width: 100%;
     top: 0;
     right: 0;
     z-index: 1;
